--- a/css/main.css
+++ b/css/main.css
@@ -62,6 +62,7 @@ margin: 0 auto;
   left: 0;
   background-color: white;
   width: 100%;
+  z-index: 10;
 }
 .main-header__brand {
   display: inline-block;
