--- a/css/main.css
+++ b/css/main.css
@@ -204,6 +204,7 @@ margin-top: 2.5rem;
 .services__cards{
   display: flex;
   justify-content: space-between;
+  z-index: -1;
 }
 .service-card {
 padding: 3.75rem 1.87rem;
@@ -287,7 +288,7 @@ color: #5b6d75;
 /* My works section styles */
 .portfolio {
   padding: 6.25rem 0;
-
+  z-index: -1;
 }
 .portfolio-items {
 position: relative;
